# PIVOT

./: .gitignore  CMakeLists.txt  README.md  build.sh  imgui.ini  print_logo.sh
config/: robot_kinematic_viewer.yaml
config/playback_bundles/: demo_obstacles.yaml  demo_playback_bundle.yaml
config/teach/: demo.yaml
config/trajectories/: galbot_mobile_wbc_ik_bimanual_shapes.csv  galbot_mobile_wbc_ik_bimanual_sweep.csv  galbot_mobile_wbc_ik_chassis_sweep.csv  galbot_mobile_wbc_ik_collision_task_debug_baseline.csv  galbot_mobile_wbc_ik_collision_task_debug_collision_task.csv  galbot_mobile_wbc_ik_left_arm.csv  galbot_mobile_wbc_ik_triple_chassis_x.csv  galbot_mobile_wbc_ik_triple_shapes.csv  galbot_wbc_ik_triple_fixed_base.csv
config/trajectories/collision_task_csv/: wbc_ik_collision_task_case_suite_right_arm_deep_hook_with_collision_task.csv  wbc_ik_collision_task_case_suite_right_arm_deep_hook_without_collision_task.csv  wbc_ik_collision_task_case_suite_shared_goal_press_with_collision_task.csv  wbc_ik_collision_task_case_suite_shared_goal_press_without_collision_task.csv  wbc_ik_collision_task_case_suite_single_arm_intrusion_with_collision_task.csv  wbc_ik_collision_task_case_suite_single_arm_intrusion_without_collision_task.csv  wbc_ik_collision_task_case_suite_wrist_margin_projection_esdf_with_collision_task.csv  wbc_ik_collision_task_case_suite_wrist_margin_projection_esdf_without_collision_task.csv  wbc_ik_collision_task_case_suite_wrist_margin_projection_hppfcl_with_collision_task.csv  wbc_ik_collision_task_passive_left_arm_forearm_overpass_margin_without_collision_task.csv  wbc_ik_collision_task_passive_left_arm_wrist_margin_projection_esdf_with_collision_task.csv  wbc_ik_collision_task_passive_left_arm_wrist_margin_projection_esdf_without_collision_task.csv  wbc_ik_collision_task_passive_left_arm_wrist_margin_projection_hppfcl_with_collision_task.csv  wbc_ik_collision_task_passive_left_arm_wrist_margin_projection_with_collision_task.csv  wbc_ik_collision_task_passive_left_arm_wrist_margin_projection_without_collision_task.csv
docs/: DEPENDENCIES.md  LOG_REPLAY_DESIGN.md  ROBOT_KINEMATIC_VIEWER_DESIGN.md
include/ik_backends/wbc_chain_ik/wbc/robot/traits/: chain_ik.h
include/kinematic_viewer/: kinematic_angle_units.h  kinematic_app.h  kinematic_bootstrap.h  kinematic_collision_distance.h  kinematic_collision_monitor.h  kinematic_collision_state.h  kinematic_config_watcher.h  kinematic_demo_visual.h  kinematic_ik_controller.h  kinematic_initial_pose.h  kinematic_input_handler.h  kinematic_link_inspector.h  kinematic_link_kinematics.h  kinematic_marker_target_state.h  kinematic_obstacle_state.h  kinematic_path_planner.h  kinematic_playback.h  kinematic_playback_bundle.h  kinematic_playback_state.h  kinematic_playback_state_machine.h  kinematic_point_cloud.h  kinematic_point_cloud_pcl.h  kinematic_render_loop.h  kinematic_robot_tree_panel.h  kinematic_runtime_state.h  kinematic_shader_utils.h  kinematic_sidebar_layout.h  kinematic_sidebar_panels.h  kinematic_string_utils.h  kinematic_teach.h  kinematic_teach_panel.h  kinematic_teach_state.h  kinematic_user_obstacles.h  kinematic_video_panel.h  kinematic_video_recorder.h  kinematic_viewer_config.h  kinematic_viewer_session.h  kinematic_viewer_state.h  kinematic_viewport_hud.h  rkv_esdf_grid.h  (+4 more)
include/rkv/: config_types.h  ik_solver.h  scene.h  types.h
include/teleop_viewer/: config_types.h  ik_solver.h  scene.h  types.h
scripts/: collect_dep.sh  rkv_prepare_config.py  rkv_session.sh  run_viewer.sh  rviz_ik_interactive_marker.py  start_rviz_ik_stack.sh
src/: robot_kinematic_viewer.cpp
src/ik_backends/wbc_chain_ik/robot/traits/: chain_ik.cpp
src/kinematic_viewer/: kinematic_app.cpp  kinematic_bootstrap.cpp  kinematic_collision_distance.cpp  kinematic_collision_monitor.cpp  kinematic_config_watcher.cpp  kinematic_demo_visual.cpp  kinematic_ik_controller.cpp  kinematic_initial_pose.cpp  kinematic_input_handler.cpp  kinematic_link_inspector.cpp  kinematic_link_kinematics.cpp  kinematic_marker_target_state.cpp  kinematic_path_planner.cpp  kinematic_playback.cpp  kinematic_playback_bundle.cpp  kinematic_playback_state_machine.cpp  kinematic_point_cloud.cpp  kinematic_point_cloud_pcl.cpp  kinematic_render_loop.cpp  kinematic_robot_tree_panel.cpp  kinematic_shader_utils.cpp  kinematic_sidebar_panels.cpp  kinematic_string_utils.cpp  kinematic_teach.cpp  kinematic_teach_panel.cpp  kinematic_ui_theme.cpp  kinematic_user_obstacles.cpp  kinematic_video_panel.cpp  kinematic_video_recorder.cpp  kinematic_viewer_config.cpp  kinematic_viewer_session.cpp  kinematic_viewport_hud.cpp  rkv_esdf_grid.cpp  rkv_fiesta_esdf.cpp  rkv_panel_registry.cpp  rkv_raycast.cpp
src/panels/: panel_ik.cpp  panel_joint.cpp  panel_obstacle.cpp  panel_planner.cpp  panel_playback.cpp  panel_point_cloud.cpp  panel_safety.cpp  panel_scene.cpp  panel_teach.cpp  panel_tf.cpp
src/rkv/: ik_solver.cpp  scene.cpp
src/teleop_viewer/: ik_solver.cpp  scene.cpp
tests/: collision_distance_test.cpp
